@@ -1,3 +1,8 @@
+2015-01-03  Mark Wielaard  <mjw@redhat.com>
+
+	* version_xlate.h (elf_cvt_Verdef): Use memmove to copy src to dest.
+	(elf_cvt_Verneed): Likewise.
+
 2015-03-28  Mark Wielaard  <mjw@redhat.com>
 
 	* elf.h: Update from glibc.
